--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ p, h2, a {
 
 .page-wrapper {
     background-color: white;
-    margin: 30px auto 100px;
+    margin: 30px auto 10%;
     border: 1px solid #5F54E8;
 }
 
@@ -79,4 +79,5 @@ p, h2, a {
     background-color: white;
     text-align: center;
     padding-top: 8px;
+    margin-bottom: 0;
 }
