added drop shadow effect on page-wrapper

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ p, h2, a {
     background-color: white;
     margin: 30px auto 10%;
     border: 1px solid #5F54E8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .content {
