--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ p, h2, a {
     font-size: 2rem;
     margin-bottom: 0;
 }
+
+
+
+
 /* Header ID */
 #atext {
     color: #5F54E8;
@@ -52,18 +56,35 @@ p, h2, a {
 
 .content {
     margin: 0 auto 10px;
-    padding: 10px;
+    padding: 10px 10px 5px;
 }
 
 .imgt {
     float:left;
     border-radius: 100%;
-    border: 1px solid #5F54E8;
-    margin: 5px 10px 10px 0;
+    border: 1px solid #8fd3f4;
+    margin: 5px 12px 12px 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation-name: colorborder;
+    animation-duration: 2s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
-p.link {
+@keyframes colorborder {
+    from {border-color: #8fd3f4;}
+    to {border-color: #5F54E8;}
+  }
+
+  /* that animation is mildly creepy... */
+
+.plink {
     text-decoration: none;
+    color:#5F54E8
+}
+
+.p-end {
+    margin-bottom: 0;
 }
 
 /* portfolio classes */
