--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p, h2, a {
 .imgt {
     float:left;
     border-radius: 100%;
-    border: 1px solid #8fd3f4;
+    border: 2px solid #8fd3f4;
     margin: 5px 12px 12px 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     animation-name: colorborder;
@@ -82,6 +82,8 @@ p, h2, a {
 
 .imgt {
     float:none;
+    display: block;
+    margin: 5px auto 20px auto;
 }    
 
 }
