--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+html {
+    height: 100%;
+}
 body {
+    background-color: #08AEEA;
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 h1 {
@@ -85,8 +93,9 @@ p, h2, a {
     display: block;
     margin: 5px auto 20px auto;
 }    
-
 }
+
+/* That's the only media query I swear! */
 
 .plink {
     text-decoration: none;
