--- a/style.css
+++ b/style.css
@@ -110,13 +110,16 @@ p, h2, a {
     }
 }
 /* ^ that's the two media queries I've got ^ */
+.card-body {
+    padding-top: 5px;
+}
 
 .portbox {
     width: 200px;
     height: 200px;
     display: inline-block;
     text-align: center;
-    margin: 0 20px 20px 0;
+    margin: 15px 20px 20px 0;
     border: 1px solid #5F54E8;
     opacity: 1;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -130,8 +133,7 @@ p, h2, a {
     text-align: center;
     font-family: 'Monoton', cursive;
     color: #5F54E8;
-    font-size: 1.5rem;
-    
+    font-size: 1.5rem;    
 }
 /* contact classes */
 
